--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/BattleGround.BattleGround
-GameDefaultMap=/Game/BattleGround.BattleGround
+GameDefaultMap=/Game/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Tank/BluePrints/TankGame_BP.TankGame_BP_C
 
 [/Script/Engine.PhysicsSettings]
